--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,4 +1,7 @@
 {
-    "home":"首页",
-    "login":"登录"
+	"home": "首页",
+	"login": "登录",
+	"categories": "分类目录",
+	"recent posts": "近期文章",
+	"recent comments": "近期评论"
 }
